[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://sprites/Fart/fart01.png" type="Texture" id=3]
[ext_resource path="res://sprites/personaje.png" type="Texture" id=4]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.460443, 0.757669 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 269, 435 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 269, 0, 269, 435 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 538, 0, 269, 435 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 807, 0, 269, 435 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[node name="Player" type="Area2D"]
position = Vector2( 179, 369 )
script = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 3, 23 )
scale = Vector2( 0.25, 0.25 )
emitting = false
amount = 3
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 41.09
direction = Vector2( -1, 0 )
spread = 50.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount = 0.5
scale_amount_curve = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 7 )
animation = "run"
frame = 1

[node name="FartChargeLabel" type="Label" parent="."]
margin_left = -23.0
margin_top = -139.0
margin_right = 17.0
margin_bottom = -125.0

[node name="Tween" type="Tween" parent="."]

[node name="FartIndicator" type="Sprite" parent="."]
position = Vector2( 0, -80 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.101961 )
position = Vector2( 0, -80 )
texture = ExtResource( 2 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
